--- a/appproject/pubspec.yaml
+++ b/appproject/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
     sdk: flutter
   fluttertoast: ^8.0.9
   fancy_bottom_navigation: ^0.3.2
+  http: ^0.13.5
+  provider: ^6.0.3
+  flutter_slidable: ^1.3.1
+
 
 dev_dependencies:
 
